Update ClanManagerMemory.java